resolvido bug da tabela nao centralizada, adicionei text-align center na table

--- a/semana2/bugFix/index.css
+++ b/semana2/bugFix/index.css
@@ -110,6 +110,7 @@ table {
     width: 60%;
     margin-left: auto;
     margin-right: auto;
+    text-align: center;
 }
 
 td button {
